--- a/src/less/pages/course/courseware.less
+++ b/src/less/pages/course/courseware.less
@@ -69,7 +69,7 @@
                     background: none;
                     background-color: @white;
                     padding: 0.6em;
-
+                    overflow: hidden;
                     li {
                         margin: 0 0 0.6em 1em;
 
